# napi-rs-issue

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.d.ts  index.js  package.json  test.js
src/: lib.rs
