[package]
name = "napi-rs-issue"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi-derive = "2"

[dependencies.napi]
version = "2"
features = ["napi6"]

[build-dependencies]
napi-build = "1"
